tdf#121263 Calc crashes when hide multiple sheets

regression from
	commit 87c06415cebd707ae359cb2f1b06d468cb6afb08
    clang-tidy performance-unnecessary-copy-init in sc

Change-Id: I49a7099c0a5e9e684008d2e799f9ee94f867d786
Reviewed-on: https://gerrit.libreoffice.org/63239
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>